LU-6524 llog: Incorrect use of ERR_PTR

This issue is raised by smatch as below description
llog_osd_destroy incorrectly tried to use ERR_PTR pointer
Resolution is changed rc value to ENOENT

Signed-off-by: Ulka Vaze <ulka.vaze@yahoo.in>
Change-Id: I010c21763ac7fc3664214eda93ea18e1c2d35de6